--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -44,22 +44,22 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.osgi-mock.core</artifactId>
-            <version>3.4.1-SNAPSHOT</version>
+            <version>3.4.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.osgi-mock.junit4</artifactId>
-            <version>3.4.1-SNAPSHOT</version>
+            <version>3.4.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.jcr-mock</artifactId>
-            <version>1.6.13-SNAPSHOT</version>
+            <version>1.6.14</version>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.resourceresolver-mock</artifactId>
-            <version>1.4.5-SNAPSHOT</version>
+            <version>1.4.6</version>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
