--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.testing.sling-mock.parent</artifactId>
-    <version>3.5.2</version>
+    <version>3.5.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Apache Sling Testing Sling Mock Parent</name>
@@ -37,12 +37,12 @@
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-testing-sling-mock.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-testing-sling-mock.git</developerConnection>
-        <tag>org.apache.sling.testing.sling-mock.reactor-3.5.2</tag>
+        <tag>org.apache.sling.testing.sling-mock.reactor-3.3.2</tag>
         <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-testing-sling-mock.git</url>
     </scm>
 
     <properties>
-        <project.build.outputTimestamp>2024-08-21T07:45:53Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2024-08-21T07:46:25Z</project.build.outputTimestamp>
     </properties>
 
     <dependencyManagement>
