--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -51,12 +51,12 @@
             <dependency>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>org.apache.sling.testing.osgi-mock.core</artifactId>
-                <version>3.5.0</version>
+                <version>3.5.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>org.apache.sling.testing.osgi-mock.junit4</artifactId>
-                <version>3.5.0</version>
+                <version>3.5.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.sling</groupId>
@@ -66,7 +66,7 @@
             <dependency>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>org.apache.sling.testing.resourceresolver-mock</artifactId>
-                <version>1.5.0</version>
+                <version>1.5.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.sling</groupId>
