--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.sling</groupId>
         <artifactId>sling-bundle-parent</artifactId>
-        <version>60</version>
+        <version>62</version>
         <relativePath />
     </parent>
 
@@ -43,6 +43,7 @@
 
     <properties>
         <project.build.outputTimestamp>2024-08-21T07:46:25Z</project.build.outputTimestamp>
+        <sling.java.version>11</sling.java.version>
     </properties>
 
     <dependencyManagement>
