--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -52,12 +52,12 @@
             <dependency>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>org.apache.sling.testing.osgi-mock.core</artifactId>
-                <version>3.5.1-SNAPSHOT</version>
+                <version>3.5.2</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>org.apache.sling.testing.osgi-mock.junit4</artifactId>
-                <version>3.5.1-SNAPSHOT</version>
+                <version>3.5.2</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.sling</groupId>
