--- a/relocate/pom.xml
+++ b/relocate/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.sling</groupId>
         <artifactId>org.apache.sling.testing.sling-mock.parent</artifactId>
-        <version>4.0.1-SNAPSHOT</version>
+        <version>4.0.2</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
