SLING-13104 Update to Oak 1.68.0

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -44,6 +44,7 @@
     <properties>
         <project.build.outputTimestamp>2025-11-18T08:44:44Z</project.build.outputTimestamp>
         <sling.java.version>17</sling.java.version>
+        <oak.version>1.68.0</oak.version>
     </properties>
 
     <dependencyManagement>
@@ -62,7 +63,7 @@
             <dependency>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>org.apache.sling.testing.jcr-mock</artifactId>
-                <version>1.7.0</version>
+                <version>1.7.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.sling</groupId>
@@ -203,13 +204,13 @@
             <dependency>
                 <groupId>org.apache.jackrabbit</groupId>
                 <artifactId>oak-jackrabbit-api</artifactId>
-                <version>1.22.15</version>
+                <version>${oak.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.jackrabbit</groupId>
                 <artifactId>oak-jcr</artifactId>
-                <version>1.22.15</version>
+                <version>${oak.version}</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.osgi</groupId>
@@ -367,6 +368,9 @@
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
+            <properties>
+                <oak.version>1.90.0</oak.version>
+            </properties>
             <dependencyManagement>
                 <dependencies>
                     <dependency>
@@ -448,16 +452,6 @@
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.featureflags</artifactId>
                         <version>1.2.2</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.jackrabbit</groupId>
-                        <artifactId>oak-jackrabbit-api</artifactId>
-                        <version>1.56.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.jackrabbit</groupId>
-                        <artifactId>oak-jcr</artifactId>
-                        <version>1.56.0</version>
                     </dependency>
                 </dependencies>
             </dependencyManagement>
