--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -214,11 +214,11 @@
                 <exclusions>
                     <exclusion>
                         <groupId>org.osgi</groupId>
-                        <artifactId>org.osgi.service.metatype.annotations</artifactId>
+                        <artifactId>org.osgi.service.component.annotations</artifactId>
                     </exclusion>
                     <exclusion>
                         <groupId>org.osgi</groupId>
-                        <artifactId>org.osgi.annotation</artifactId>
+                        <artifactId>org.osgi.service.metatype.annotations</artifactId>
                     </exclusion>
                     <exclusion>
                         <groupId>org.slf4j</groupId>
