--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -63,7 +63,7 @@
             <dependency>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>org.apache.sling.testing.jcr-mock</artifactId>
-                <version>1.7.0</version>
+                <version>1.7.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.sling</groupId>
