--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -45,6 +45,7 @@
         <project.build.outputTimestamp>2025-11-18T08:44:44Z</project.build.outputTimestamp>
         <sling.java.version>17</sling.java.version>
         <oak.version>1.68.0</oak.version>
+        <jackrabbit.version>2.22.2</jackrabbit.version>
     </properties>
 
     <dependencyManagement>
@@ -203,9 +204,13 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.jackrabbit</groupId>
+                <artifactId>jackrabbit-jcr-commons</artifactId>
+                <version>${jackrabbit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.jackrabbit</groupId>
                 <artifactId>oak-jackrabbit-api</artifactId>
                 <version>${oak.version}</version>
-                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.jackrabbit</groupId>
@@ -370,6 +375,7 @@
             </activation>
             <properties>
                 <oak.version>1.90.0</oak.version>
+                <jackrabbit.version>2.22.3</jackrabbit.version>
             </properties>
             <dependencyManagement>
                 <dependencies>
@@ -386,12 +392,12 @@
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.api</artifactId>
-                        <version>3.0.0</version>
+                        <version>3.0.2</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.resourceresolver</artifactId>
-                        <version>2.0.0</version>
+                        <version>2.0.2</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
@@ -401,17 +407,17 @@
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.jcr.api</artifactId>
-                        <version>2.4.0</version>
+                        <version>2.4.2</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.jcr.resource</artifactId>
-                        <version>3.3.2</version>
+                        <version>3.3.6</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.scripting.api</artifactId>
-                        <version>2.2.0</version>
+                        <version>2.2.2</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
@@ -431,7 +437,7 @@
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.settings</artifactId>
-                        <version>1.4.2</version>
+                        <version>1.5.0</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
@@ -441,12 +447,12 @@
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.adapter</artifactId>
-                        <version>2.2.0</version>
+                        <version>2.3.0</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.xss</artifactId>
-                        <version>2.4.2</version>
+                        <version>2.4.10</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
