SLING-13104 explicitly define jackrabbit-jcr-commons dependency

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -359,6 +359,7 @@
             </activation>
             <properties>
                 <oak.version>1.68.0</oak.version>
+                <jackrabbit.version>2.22.3</jackrabbit.version>
             </properties>
             <dependencyManagement>
                 <dependencies>
