--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -44,6 +44,8 @@
     <properties>
         <project.build.outputTimestamp>2025-11-18T08:44:44Z</project.build.outputTimestamp>
         <sling.java.version>17</sling.java.version>
+        <oak.version>1.68.0</oak.version>
+        <jackrabbit.version>2.22.2</jackrabbit.version>
     </properties>
 
     <dependencyManagement>
@@ -62,7 +64,7 @@
             <dependency>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>org.apache.sling.testing.jcr-mock</artifactId>
-                <version>1.7.0</version>
+                <version>1.7.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.sling</groupId>
@@ -202,22 +204,26 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.jackrabbit</groupId>
+                <artifactId>jackrabbit-jcr-commons</artifactId>
+                <version>${jackrabbit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.jackrabbit</groupId>
                 <artifactId>oak-jackrabbit-api</artifactId>
-                <version>1.22.15</version>
-                <scope>compile</scope>
+                <version>${oak.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.jackrabbit</groupId>
                 <artifactId>oak-jcr</artifactId>
-                <version>1.22.15</version>
+                <version>${oak.version}</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.osgi</groupId>
-                        <artifactId>org.osgi.service.metatype.annotations</artifactId>
+                        <artifactId>org.osgi.service.component.annotations</artifactId>
                     </exclusion>
                     <exclusion>
                         <groupId>org.osgi</groupId>
-                        <artifactId>org.osgi.annotation</artifactId>
+                        <artifactId>org.osgi.service.metatype.annotations</artifactId>
                     </exclusion>
                     <exclusion>
                         <groupId>org.slf4j</groupId>
@@ -367,6 +373,10 @@
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
+            <properties>
+                <oak.version>1.90.0</oak.version>
+                <jackrabbit.version>2.22.3</jackrabbit.version>
+            </properties>
             <dependencyManagement>
                 <dependencies>
                     <dependency>
@@ -382,12 +392,12 @@
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.api</artifactId>
-                        <version>3.0.0</version>
+                        <version>3.0.2</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.resourceresolver</artifactId>
-                        <version>2.0.0</version>
+                        <version>2.0.2</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
@@ -397,17 +407,17 @@
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.jcr.api</artifactId>
-                        <version>2.4.0</version>
+                        <version>2.4.2</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.jcr.resource</artifactId>
-                        <version>3.3.2</version>
+                        <version>3.3.6</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.scripting.api</artifactId>
-                        <version>2.2.0</version>
+                        <version>2.2.2</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
@@ -427,7 +437,7 @@
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.settings</artifactId>
-                        <version>1.4.2</version>
+                        <version>1.5.0</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
@@ -437,27 +447,17 @@
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.adapter</artifactId>
-                        <version>2.2.0</version>
+                        <version>2.3.0</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.xss</artifactId>
-                        <version>2.4.2</version>
+                        <version>2.4.10</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.sling</groupId>
                         <artifactId>org.apache.sling.featureflags</artifactId>
                         <version>1.2.2</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.jackrabbit</groupId>
-                        <artifactId>oak-jackrabbit-api</artifactId>
-                        <version>1.56.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.jackrabbit</groupId>
-                        <artifactId>oak-jcr</artifactId>
-                        <version>1.56.0</version>
                     </dependency>
                 </dependencies>
             </dependencyManagement>
