--- a/junit5/pom.xml
+++ b/junit5/pom.xml
@@ -32,19 +32,10 @@
 
     <name>Apache Sling Testing Sling Mock JUnit 5</name>
 
-    <dependencyManagement>
-        <dependencies>
-
-            <dependency>
-                <groupId>org.junit</groupId>
-                <artifactId>junit-bom</artifactId>
-                <version>5.10.1</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-        </dependencies>
-    </dependencyManagement>
+    <properties>
+        <!-- Override: Compatibility with older JUnit 5 versions -->
+        <junit5.version>5.10.1</junit5.version>
+    </properties>
 
     <dependencies>
 
